--- a/public/styles/atomic/margin.less
+++ b/public/styles/atomic/margin.less
@@ -124,15 +124,15 @@
 .mlr-NegXXl { margin-left: -@gw-XXl; margin-right: -@gw-XXl; }
 
 @media (min-width: @screen-Sm){
-	.m-0--sm, .m-N--sm {--sm margin: 0; }
-	.m-A--sm {--sm margin: auto; }
-	.m-XXs--sm {--sm margin: @gw-XXs; }
-	.m-Xs--sm {--sm margin: @gw-Xs; }
-	.m-Sm--sm {--sm margin: @gw-Sm; }
-	.m-Md--sm {--sm margin: @gw-Md; }
-	.m-Lg--sm {--sm margin: @gw-Lg; }
-	.m-Xl--sm {--sm margin: @gw-Xl; }
-	.m-XXl--sm {--sm margin: @gw-XXl; }
+	.m-0--sm, .m-N--sm {margin: 0; }
+	.m-A--sm {margin: auto; }
+	.m-XXs--sm {margin: @gw-XXs; }
+	.m-Xs--sm {margin: @gw-Xs; }
+	.m-Sm--sm {margin: @gw-Sm; }
+	.m-Md--sm {margin: @gw-Md; }
+	.m-Lg--sm {margin: @gw-Lg; }
+	.m-Xl--sm {margin: @gw-Xl; }
+	.m-XXl--sm {margin: @gw-XXl; }
 
 	.mt-0--sm, .mt-N--sm { margin-top: 0; }
 	.mt-A--sm { margin-top: auto; }
